Init Hike
